fix(github): issue closed contrast

--- a/styles/github/catppuccin.user.less
+++ b/styles/github/catppuccin.user.less
@@ -612,6 +612,19 @@ regexp(
     [fill="#DBAB0A" i] {
       fill: @yellow !important;
     }
+
+    /* Issue closed timeline icon */
+    [class*="prc-Timeline-TimelineBadge"] {
+      /* Completed */
+      path[d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm1.5 0a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm10.28-1.72-4.5 4.5a.75.75 0 0 1-1.06 0l-2-2a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018l1.47 1.47 3.97-3.97a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042Z"] {
+        fill: @base;
+      }
+
+      /* Duplicate */
+      path[d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM3.965 13.096a6.5 6.5 0 0 0 9.131-9.131ZM1.5 8a6.474 6.474 0 0 0 1.404 4.035l9.131-9.131A6.499 6.499 0 0 0 1.5 8Z"] {
+        fill: @base;
+      }
+    }
   }
 }
 
